trying to prevent hero to overflow it's container

--- a/styles.css
+++ b/styles.css
@@ -70,12 +70,15 @@ a {
 .section1-2 {
     width: 450px;
     height: 200px;
+    flex-shrink: 0;
     
 }
 
 .section1-1 {
     width: 450px;
     height: 200px;
+    flex-shrink: 0;
+    min-width: 0;
     
 }
 
@@ -130,18 +133,21 @@ button {
     display: flex;
     flex-direction: column;
     padding: 75px 245px;
+    align-items: center;
 }
 
 .section3 div:first-child {
     font-size: 36px;
     font-style: italic;
     font-weight: 300;   
-    color: #1F2937 
+    color: #1F2937;
+    max-width: 720px; 
 }
 
 .section3 div:last-child {
     font-weight: 700;
     align-self: flex-end;
+    max-width: 720px;
 }
 
 .call-to-action-container {
